--- a/hydra-ergo.org
+++ b/hydra-ergo.org
@@ -188,18 +188,18 @@
    #+BEGIN_SRC emacs-lisp :results silent 
      (defhydra hydra-ergo-r-menu (:color blue)
        "r-menu"
-       ("k" (eyebrowse-close-window-config))
-       ("1" (eyebrowse-switch-to-window-config-1))
-       ("2" (eyebrowse-switch-to-window-config-2))
-       ("3" (eyebrowse-switch-to-window-config-3))
-       ("4" (eyebrowse-switch-to-window-config-4))
-       ("5" (eyebrowse-switch-to-window-config-5))
-       ("6" (eyebrowse-switch-to-window-config-6))
-       ("7" (eyebrowse-switch-to-window-config-7))
-       ("8" (eyebrowse-switch-to-window-config-8))
-       ("9" (eyebrowse-switch-to-window-config-9))
-       ("0" (eyebrowse-switch-to-window-config-0))
-       ("n" (eyebrowse-rename-window-config))
+       ("k" eyebrowse-close-window-config)
+       ("1" eyebrowse-switch-to-window-config-1)
+       ("2" eyebrowse-switch-to-window-config-2)
+       ("3" eyebrowse-switch-to-window-config-3)
+       ("4" eyebrowse-switch-to-window-config-4)
+       ("5" eyebrowse-switch-to-window-config-5)
+       ("6" eyebrowse-switch-to-window-config-6)
+       ("7" eyebrowse-switch-to-window-config-7)
+       ("8" eyebrowse-switch-to-window-config-8)
+       ("9" eyebrowse-switch-to-window-config-9)
+       ("0" eyebrowse-switch-to-window-config-0)
+       ("n" eyebrowse-rename-window-config "rename-window")
        ("i" evil-numbers/inc-at-pt)
        ("d" evil-numbers/dec-at-pt))
    #+END_SRC
