Kill Ranger buffers without window on d/w

--- a/hydra-ergo.org
+++ b/hydra-ergo.org
@@ -6,17 +6,16 @@
 ** Top
 #+BEGIN_SRC emacs-lisp :results silent  
   (defhydra hydra-ergo (evil-normal-state-map "SPC" :color blue)
-  "hydra-ergo "
-  ("a" execute-extended-command :color blue)
-
+    "hydra-ergo "
+    ("a" execute-extended-command :color blue)
     ("d" hydra-ergo-d-menu/body :color blue)
     ("e" hydra-ergo-e-menu/body :color blue)
     ("f" switch-to-buffer :color blue)
     ("i" hydra-ergo-i-menu/body :color blue)
     ("o" (lambda ()
-	    (interactive)
-	    (other-window 1)
-	    (hydra-ergo-o-menu/body)) :color blue)
+	   (interactive)
+	   (other-window 1)
+	   (hydra-ergo-o-menu/body)) :color blue)
     ("r" hydra-ergo-r-menu/body :color blue)
     ("ö" save-buffer :color blue)
     ("w" ace-window :color blue)
@@ -42,7 +41,8 @@
 	   (setq abbr-swe (not abbr-swe))
 	   (load "~/.emacs.d/lisp/my-abbrev.el")))
     ("x" hydra-ergo-x-menu/body :color blue)
-    ("," fixup-whitespace :color blue))
+    ("," fixup-whitespace :color blue)
+    ("z" hydra-ergo-z-menu/body :color blue))
     ;; (global-set-key (kbd "M-SPC") 'hydra-ergo/body)
     ;; (define-key evil-motion-state-map (kbd "SPC") 'hydra-ergo/body)
 #+END_SRC
@@ -115,7 +115,8 @@
    (defhydra hydra-ergo-d-menu (:color blue)
      ("f" dired)
      ("j" dired-jump)
-     ("k" hydra-ergo-ranger))
+     ("k" hydra-ergo-ranger)
+     ("w" ranger-kill-buffers-without-window) "ranger-kill-buffers-without-window)")
  #+END_SRC
 ** e-menu
    :PROPERTIES:
@@ -312,7 +313,38 @@
       ("j" make-frame-command)
       ("k" delete-frame))
   #+END_SRC 
+** z-menu
+    #+begin_src elisp :results silent
+(defhydra hydra-ergo-z-menu (:color blue)
+  ("-" pulseaudio-control-decrease-volume "decrease-volume" :color red)
+  ("d" pulseaudio-control-display-volume "display-volume")
+  ("+" pulseaudio-control-increase-volume "increase-volume" :color red)
+  ("m" pulseaudio-control-toggle-current-sink-mute "toggle-current-sink-mute")
+  ("x" pulseaudio-control-toggle-sink-mute-by-index "toggle-sink-mute-by-index")
+  ("e" pulseaudio-control-toggle-sink-mute-by-name "toggle-sink-mute-by-name")
+  ("]" pulseaudio-control-toggle-use-of-default-sink "toggle-use-of-default-sink")
+  ("i" pulseaudio-control-select-sink-by-index "select-sink-by-index")
+  ("n" pulseaudio-control-select-sink-by-name "select-sink-by-name")
+  ("v" pulseaudio-control-set-volume "set-volume")
+  ("b" hydra-ergo-bt-menu/body "bluetooth menu"))
+    #+end_src
 ** Subhydras
+*** bluetooth
+   #+BEGIN_SRC emacs-lisp :results silent
+(defhydra hydra-ergo-bt-menu (:color blue)
+  ("c" (lambda (arg)
+	 (interactive (list (completing-read "device:" (split-string (shell-command-to-string "bluetoothctl devices") "\n") nil)))
+	 (shell-command (concat "bluetoothctl connect " 
+				(cadr (split-string arg " "))))) "connect to bt device")
+  ("d" (lambda ()
+	 (interactive)
+	 (shell-command "bluetoothctl disconnect")) "disconnect device")
+  ("s" (lambda ()
+	 (interactive)
+	 (shell)
+	 (switch-to-buffer "*shell*")
+	 (insert "bluetoothctl")) "run shell"))
+   #+END_SRC 
 *** org-download
     :PROPERTIES:
     :ID:       8c65b7bf-859e-403c-ace9-7b1b9ccff70c
@@ -430,3 +462,4 @@
       ;; 			 hydra-ergo-dir "fav-themes.org"))
       ;; (hydra-ergo-org-to-vars hydra-ergo-fav-themes-fname)
     #+end_src
+    
