org-pomodoro start break if no active pomodoro on "k"

--- a/hydra-ergo.org
+++ b/hydra-ergo.org
@@ -120,12 +120,20 @@
      ("i" hydra-ergo-org-download/body)
      ;; ("j" (org-brain-visualize (org-brain-entry-at-pt)))
      ("j" hydra-ergo-org-rifle/body)
+     ;; ("k" (lambda ()
+     ;; 	 (interactive)
+     ;; 	 (if (not (org-clocking-p))
+     ;; 	     (org-pomodoro-kill)
+     ;; 	   (org-pomodoro-kill)
+     ;; 	   (org-pomodoro-start :short-break))))
      ("k" (lambda ()
 	    (interactive)
-	    (if (not (org-clocking-p))
-		(org-pomodoro-kill)
+	    (let ((start-break
+		   (or (org-clocking-p)
+		       (equal org-pomodoro-state :none))))
 	      (org-pomodoro-kill)
-	      (org-pomodoro-start :short-break))))
+	      (when start-break
+		(org-pomodoro-start :short-break)))))
      ("l" (lambda ()
 	    (interactive)
 	    (org-time-stamp-inactive '(16))
